# rust-kzg

./: .gitignore  .gitmodules  Cargo.toml  run-c-kzg-4844-tests.sh  run-cuda-benchmarks.sh
.github/workflows/: backend-benchmarks.yml  backend-tests.yml  blst-benchmarks.yml  blst-tests.yml  release.yml
arkworks/: Cargo.toml
arkworks/benches/: das.rs  eip_4844.rs  fft.rs  fk_20.rs  kzg.rs  recover.rs  zero_poly.rs
arkworks/src/: consts.rs  eip_4844.rs  eip_7594.rs  fft.rs  fft_g1.rs  fk20_proofs.rs  kzg_proofs.rs  kzg_types.rs  lib.rs  poly.rs  utils.rs  zero_poly.rs
arkworks/tests/: bls12_381.rs  consts.rs  das.rs  eip_4844.rs  eip_7594.rs  fft_fr.rs  fft_g1.rs  fk20_proofs.rs  kzg_proofs.rs  poly.rs  recover.rs  zero_poly.rs
arkworks3/src/: kzg_types.rs
arkworks3/tests/: bls12_381.rs
arkworks4/tests/: bls12_381.rs
arkworks5/tests/: bls12_381.rs
blst/: Cargo.toml  rust.patch
blst/benches/: bgmw.rs  eip_4844.rs  fk_20.rs  kzg.rs  lincomb.rs
blst/src/: bgmw.rs  eip_4844.rs  kzg_proofs.rs  lib.rs  msm.rs  mult_pippenger.rs
blst/src/msm/: bgmw.rs  bgmw_parallel.rs  mod.rs  pippenger.rs
blst/src/types/: fk20_multi_settings.rs  fk20_single_settings.rs  g1.rs  kzg_settings.rs
blst/tests/: bgmw.rs  bls12_381.rs  eip_4844.rs  eip_7594.rs  fk20_proofs.rs  kzg_proofs.rs
blst/tests/fixtures/valid_p1_generator_bgmw_precomputation/: data.txt
blst/tests/fixtures/valid_random_points_bgmw_precomputation/: data.txt
constantine/src/types/: g1.rs
constantine/tests/: bls12_381.rs
cuda/: Cargo.toml
cuda/kzg/: CMakeLists.txt  main.cu  pippenger.cu  test.c
cuda/kzg/src/: lib.h
kzg/: Cargo.toml
kzg-bench/src/benches/: eip_4844.rs  fk20.rs  kzg.rs  lincomb.rs
kzg-bench/src/tests/: bls12_381.rs  eip_4844.rs  fk20_proofs.rs  kzg_proofs.rs
kzg/src/: das.rs  eip_4844.rs  lib.rs
kzg/src/msm/: bgmw.rs  cell.rs  diskcache.rs  mod.rs  wbits.rs
mcl/: Cargo.toml  csharp.patch  go.patch  java.patch  nodejs.patch  python.patch  rust.patch
mcl/src/: consts.rs  das.rs  eip_4844.rs  kzg_proofs.rs  kzg_types.rs  poly.rs  utils.rs
mcl/src/types/: g1.rs
mcl/tests/: bls12_381.rs
msm-benches/: Cargo.toml
msm-benches/benches/: g1_fixed_base_msm.rs
sppark/: Cargo.toml  build.rs
sppark/benches/: eip4844.rs  msm.rs
sppark/cuda/: eip4844.cu  pippenger.cu  pippenger_inf.cu
sppark/src/: lib.rs  util.rs
zkcrypto/tests/: bls12_381.rs
