[package]
name = "rust-kzg-sppark"
version = "0.1.0"
edition = "2021"

[features]
# By default, compile with ADX extension if the host supports it.
# Binary can be executed on systems similar to the host.
default = []
# Compile in portable mode, without ISA extensions.
# Binary can be executed on all systems.
portable = [ "blst/portable" ]
# Enable ADX even if the host CPU doesn't support it.
# Binary can be executed on Broadwell+ and Ryzen+ systems.
force-adx = [ "blst/force-adx" ]
quiet = []
cuda-mobile = []

[dependencies]
ark-bls12-381 = "0.3.0"
ark-ec = { version = "0.3.0", features = ["parallel"] }
ark-ff = "0.3.0"
ark-std = "0.3.0"
blst = "0.3.11"
rand = "0.8.5"
rand_chacha = "0.3.1"
kzg = { path = "../kzg", default-features = false }
sppark = "0.1.6"

[build-dependencies]
cc = "1.0.92"
which = "6.0.1"

[dev-dependencies]
criterion = "0.5.1"
kzg-bench = { path = "../kzg-bench" }
rust-kzg-blst = { path = "../blst" }

[[bench]]
name = "msm"
harness = false
